--- a/styles/main.scss
+++ b/styles/main.scss
@@ -37,9 +37,8 @@ header {
 
   transition: all 100ms ease;
 
-  h1 {
-    font-size: 32px;
-    width: max-content;
+  img {
+    width: 175px;
   }
 
   label {
@@ -72,7 +71,8 @@ header {
     justify-content: space-between;
     padding-left: 0;
 
-    h1 {
+    img {
+      width: 150px;
       margin-left: 20px;
     }
 
@@ -182,7 +182,11 @@ header {
 }
 
 .banner {
+  .cover {
+    opacity: 0;
+  }
   .container {
+    min-height: 70vh;
     margin-top: 100px;
     width: 80%;
     margin: 0 auto;
@@ -214,6 +218,10 @@ header {
 
           &:hover {
             background-color: $red;
+          }
+
+          img {
+            width: 32px;
           }
         }
       }
@@ -292,7 +300,7 @@ header {
       width: 100%;
       margin: 100px 0;
 
-      img {
+      .cover {
         display: none;
       }
 
@@ -424,8 +432,6 @@ header {
     margin-top: 50px;
 
     .container {
-      // outline: 2px solid red;
-
       width: 70%;
       margin: 0 auto;
       display: flex;
@@ -438,7 +444,8 @@ header {
       }
 
       .about_info_body {
-        // outline: 2px solid red;
+        text-align: center;
+        margin: 0 auto;
 
         .about_info_title {
           h1 {
@@ -446,17 +453,20 @@ header {
           }
 
           p {
-            margin-bottom: 40px;
-            // font-size: 1.1em;
+            margin: 0 auto 40px auto;
+            max-width: 600px;
           }
         }
 
         .about_infos {
           display: flex;
           align-items: center;
+          justify-content: center;
+          text-align: left;
+          margin: 0 auto;
 
           .about_info {
-            margin-right: 150px;
+            margin: 0 50px;
             .info {
               margin-bottom: 30px;
               p {
@@ -622,7 +632,7 @@ header {
 
 .portfolio {
   .portfolio_header_options {
-    width: fit-content;
+    width: 50%;
     margin: 50px auto;
     display: flex;
     align-items: center;
@@ -713,7 +723,8 @@ header {
     border: 2px solid $red;
     border-radius: 50px;
     padding: 10px 40px;
-    width: fit-content;
+    width: 200px;
+    text-align: center;
     transition: all 100ms ease;
     margin: -20px auto 100px auto;
 
@@ -1320,6 +1331,10 @@ header {
 }
 
 footer {
+  .sign {
+    width: 400px;
+    margin: -150px 0 -150px 0;
+  }
   .container {
     width: 55%;
     margin: 0 auto;
@@ -1340,8 +1355,9 @@ footer {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: fit-content;
+      width: 50%;
       margin: 50px auto 100px auto;
+
       .social_link {
         margin-right: 25px;
         width: 52px;
@@ -1364,8 +1380,7 @@ footer {
 
   p {
     width: fit-content;
-    margin: 0 auto;
-    margin-bottom: 10px;
+    margin: 0 auto 10px auto;
 
     a {
       color: $red;
@@ -1378,16 +1393,60 @@ footer {
       width: 100%;
 
       .social_links {
-        width: 80%;
+        width: fit-content;
         .social_link {
-          margin-right: 0;
+          margin: 0 10px;
         }
       }
     }
+  }
+}
 
-    p {
-      width: 90%;
-      text-align: center;
+.work {
+  width: 100%;
+  padding: 20px 100px;
+
+  display: flex;
+  flex-direction: column;
+
+  .cover {
+    width: 100%;
+    max-width: 1000px;
+    margin: 100px auto 50px auto;
+    border-radius: 10px;
+  }
+
+  .tags {
+    margin: 50px auto;
+    span {
+      background-color: $header-color;
+      font-size: 20px;
+      padding: 5px 20px;
+      border-radius: 5px;
+    }
+  }
+
+  h1 {
+    font-size: 64px;
+    // margin-bottom: 50px;
+    text-align: center;
+  }
+
+  p {
+    max-width: 600px;
+    // margin-bottom: 50px;
+  }
+
+  .otherPhotos {
+    display: flex;
+    flex-direction: column;
+
+    img {
+      width: 100%;
+      max-width: 1000px;
+      margin: 100px auto 20px auto;
+      border-radius: 10px;
+      margin-bottom: 20px;
     }
   }
 }
