--- a/styles/animation/_animations.scss
+++ b/styles/animation/_animations.scss
@@ -8,3 +8,49 @@
     color: transparent;
   }
 }
+
+@keyframes grow1 {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+@keyframes grow2 {
+  0% {
+    opacity: 0;
+    transform: scale(0.25);
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+@keyframes grow3 {
+  0% {
+    opacity: 0;
+    transform: scale(0.4);
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
