--- a/styles/main.css
+++ b/styles/main.css
@@ -31,6 +31,102 @@ a {
   }
 }
 
+@-webkit-keyframes grow1 {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 0;
+  }
+}
+
+@keyframes grow1 {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes grow2 {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.25);
+            transform: scale(0.25);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 0;
+  }
+}
+
+@keyframes grow2 {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.25);
+            transform: scale(0.25);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes grow3 {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.4);
+            transform: scale(0.4);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 0;
+  }
+}
+
+@keyframes grow3 {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.4);
+            transform: scale(0.4);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 0;
+  }
+}
+
 *,
 *::after,
 *::before {
@@ -1521,16 +1617,16 @@ header ul li a:hover {
   background-color: #1f2235;
 }
 
-footer .sign {
-  width: 400px;
-  margin: -150px 0 -150px 0;
-}
-
 footer .container {
   width: 55%;
   margin: 0 auto;
   padding-top: 100px;
   text-align: center;
+}
+
+footer .container .sign {
+  width: 400px;
+  margin: -150px 0 -150px 0;
 }
 
 footer .container h1 {
@@ -1578,10 +1674,8 @@ footer .container .social_links .social_link:hover {
 }
 
 footer p {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin: 0 auto 10px auto;
+  width: 500px;
+  text-align: center;
 }
 
 footer p a {
@@ -1657,6 +1751,58 @@ footer p a {
   margin: 100px auto 20px auto;
   border-radius: 10px;
   margin-bottom: 20px;
+}
+
+.loader_container {
+  width: 100vw;
+  height: 100vh;
+  background-color: #25283d;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.loader_container .loader {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.loader_container .loader .shade {
+  position: absolute;
+  border-radius: 50%;
+  opacity: 0;
+}
+
+.loader_container .loader .shade-1 {
+  width: 20px;
+  height: 20px;
+  border: 5px solid #fd7e14;
+  -webkit-animation: grow1 2s ease-in-out infinite;
+          animation: grow1 2s ease-in-out infinite;
+}
+
+.loader_container .loader .shade-2 {
+  width: 40px;
+  height: 40px;
+  border: 5px solid #6f42c1;
+  -webkit-animation: grow2 2s 0.5s ease-in-out infinite;
+          animation: grow2 2s 0.5s ease-in-out infinite;
+}
+
+.loader_container .loader .shade-3 {
+  width: 60px;
+  height: 60px;
+  border: 5px solid #e83e8c;
+  -webkit-animation: grow3 2s 1.2s ease-in-out infinite;
+          animation: grow3 2s 1.2s ease-in-out infinite;
 }
 
 .section_header {
