--- a/styles/main.scss
+++ b/styles/main.scss
@@ -672,11 +672,6 @@ header {
     }
 
     /* clear fix */
-    .grid:after {
-      // content: "";
-      // display: block;
-      // clear: both;
-    }
 
     /* ---- .grid-item ---- */
 
@@ -1331,15 +1326,16 @@ header {
 }
 
 footer {
-  .sign {
-    width: 400px;
-    margin: -150px 0 -150px 0;
-  }
   .container {
     width: 55%;
     margin: 0 auto;
     padding-top: 100px;
     text-align: center;
+
+    .sign {
+      width: 400px;
+      margin: -150px 0 -150px 0;
+    }
 
     h1 {
       margin-bottom: 50px;
@@ -1379,8 +1375,8 @@ footer {
   }
 
   p {
-    width: fit-content;
-    margin: 0 auto 10px auto;
+    width: 500px;
+    text-align: center;
 
     a {
       color: $red;
@@ -1447,6 +1443,54 @@ footer {
       margin: 100px auto 20px auto;
       border-radius: 10px;
       margin-bottom: 20px;
+    }
+  }
+}
+
+.loader_container {
+  width: 100vw;
+  height: 100vh;
+  background-color: $body-color;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  display: grid;
+  place-items: center;
+
+  .loader {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+
+    .shade {
+      position: absolute;
+      border-radius: 50%;
+      opacity: 0;
+    }
+
+    .shade-1 {
+      width: 20px;
+      height: 20px;
+
+      border: 5px solid $orange;
+      animation: grow1 2s ease-in-out infinite;
+    }
+
+    .shade-2 {
+      width: 40px;
+      height: 40px;
+      border: 5px solid $purple;
+      animation: grow2 2s 0.5s ease-in-out infinite;
+    }
+
+    .shade-3 {
+      width: 60px;
+      height: 60px;
+      border: 5px solid $pink;
+      animation: grow3 2s 1.2s ease-in-out infinite;
     }
   }
 }
